<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_avatardetail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/rounded"
        android:contentDescription="@string/img_avatar"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_detail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="16dp"
        android:elevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_username_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/username"
                tools:ignore="RelativeOverlap" />
            <TextView
                android:id="@+id/tv_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_username_detail"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:text="@string/full_name"/>
            <ImageView
                android:id="@+id/img_location"
                android:layout_width="14dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_baseline_location"
                android:layout_below="@id/tv_fullname"
                android:layout_marginStart="120dp"
                android:contentDescription="@string/location" />
            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_location"
                android:layout_below="@id/tv_fullname"
                android:textSize="14sp"
                android:text="@string/location"/>
            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_baseline_business_24"
                android:layout_marginTop="8dp"
                android:layout_below="@id/img_location"
                android:layout_marginStart="120dp"
                android:contentDescription="@string/company" />
            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_location"
                android:layout_toEndOf="@id/img_location"
                android:textSize="14sp"
                android:text="@string/company"/>
            <LinearLayout
                android:id="@+id/label_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_company"
                android:padding="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/followers"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/repository"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/gists"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/following"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/label_detail"
                android:padding="8dp">
                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/no"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/no"/>
                <TextView
                    android:id="@+id/tv_gists"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/no"/>
                <TextView
                    android:id="@+id/following"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/no"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardview_detail"/>
    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tabslayout"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_alignStart="@id/cardview_detail"
        app:srcCompat ="@drawable/ic_baseline_favorite"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_alignEnd="@id/cardview_detail"
        app:srcCompat ="@drawable/ic_baseline_share"/>
    <ImageButton
        android:id="@+id/btn_setting_detail"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="@drawable/ic_baseline_settings"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/setting" />
    <ImageButton
        android:id="@+id/btn_arrow_back"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="@drawable/ic_baseline_arrow_back"
        android:contentDescription="@string/back" />

</RelativeLayout>
